logic & responsive design added

--- a/objectValue.html
+++ b/objectValue.html
@@ -18,7 +18,8 @@
             <button id="btnForward">>></button>
         </div>
         <h3 id="aboutLine">Name</h3>
-        <div id="content"></div>
+        <div id="content">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum odio quae error nemo optio, architecto amet similique saepe laboriosam quis quibusdam consequatur reprehenderit id sit! Recusandae ullam beatae nobis assumenda.
+        Repellendus cum illo doloremque sit laborum, quos culpa ipsa cumque adipisci quibusdam. Ducimus officiis facere totam, vero iste, aut blanditiis quis excepturi explicabo amet molestias, inventore enim impedit. Id, nostrum?</div>
     </div>
 
 
